plug in button add smtp client & add button delete smtp client

--- a/EmailHtmlSender/Properties/Settings.settings
+++ b/EmailHtmlSender/Properties/Settings.settings
@@ -8,5 +8,11 @@
   &lt;string&gt;peter.kvayt@gmail.com&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
+    <Setting Name="SmtpClients" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;string&gt;smtp.gmail.com&lt;/string&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
